--- a/Orrery/en.lproj/MainMenu.xib
+++ b/Orrery/en.lproj/MainMenu.xib
@@ -1340,6 +1340,7 @@
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{-2, 357}, {131, 26}}</string>
 									<reference key="NSSuperview" ref="484836517"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="160690939"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
 									<bool key="NSEnabled">YES</bool>
@@ -1359,9 +1360,11 @@
 										<string key="NSKeyEquivalent"/>
 										<int key="NSPeriodicDelay">400</int>
 										<int key="NSPeriodicInterval">75</int>
-										<object class="NSMenuItem" key="NSMenuItem" id="668352029">
+										<object class="NSMenuItem" key="NSMenuItem" id="8034429">
 											<reference key="NSMenu" ref="489387585"/>
-											<string key="NSTitle">Above</string>
+											<bool key="NSIsDisabled">YES</bool>
+											<bool key="NSIsHidden">YES</bool>
+											<string key="NSTitle">?</string>
 											<string key="NSKeyEquiv"/>
 											<int key="NSKeyEquivModMask">1048576</int>
 											<int key="NSMnemonicLoc">2147483647</int>
@@ -1375,7 +1378,17 @@
 										<object class="NSMenu" key="NSMenu" id="489387585">
 											<string key="NSTitle">OtherViews</string>
 											<array class="NSMutableArray" key="NSMenuItems">
-												<reference ref="668352029"/>
+												<object class="NSMenuItem" id="668352029">
+													<reference key="NSMenu" ref="489387585"/>
+													<string key="NSTitle">Above</string>
+													<string key="NSKeyEquiv"/>
+													<int key="NSKeyEquivModMask">1048576</int>
+													<int key="NSMnemonicLoc">2147483647</int>
+													<reference key="NSOnImage" ref="35465992"/>
+													<reference key="NSMixedImage" ref="502551668"/>
+													<string key="NSAction">_popUpItemAction:</string>
+													<reference key="NSTarget" ref="418294893"/>
+												</object>
 												<object class="NSMenuItem" id="1013130620">
 													<reference key="NSMenu" ref="489387585"/>
 													<string key="NSTitle">Side</string>
@@ -1387,20 +1400,11 @@
 													<string key="NSAction">_popUpItemAction:</string>
 													<reference key="NSTarget" ref="418294893"/>
 												</object>
-												<object class="NSMenuItem" id="8034429">
-													<reference key="NSMenu" ref="489387585"/>
-													<string key="NSTitle">?</string>
-													<string key="NSKeyEquiv"/>
-													<int key="NSKeyEquivModMask">1048576</int>
-													<int key="NSMnemonicLoc">2147483647</int>
-													<reference key="NSOnImage" ref="35465992"/>
-													<reference key="NSMixedImage" ref="502551668"/>
-													<string key="NSAction">_popUpItemAction:</string>
-													<reference key="NSTarget" ref="418294893"/>
-												</object>
+												<reference ref="8034429"/>
 											</array>
 											<reference key="NSMenuFont" ref="771040883"/>
 										</object>
+										<int key="NSSelectedIndex">2</int>
 										<int key="NSPreferredEdge">1</int>
 										<bool key="NSUsesItemFromMenu">YES</bool>
 										<bool key="NSAltersState">YES</bool>
@@ -1413,6 +1417,7 @@
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{188, 361}, {70, 18}}</string>
 									<reference key="NSSuperview" ref="484836517"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="748902699"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
 									<bool key="NSEnabled">YES</bool>
@@ -1444,6 +1449,7 @@
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{262, 361}, {50, 18}}</string>
 									<reference key="NSSuperview" ref="484836517"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="544208769"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
 									<bool key="NSEnabled">YES</bool>
@@ -1470,6 +1476,7 @@
 									<int key="NSvFlags">268</int>
 									<string key="NSFrameSize">{505, 361}</string>
 									<reference key="NSSuperview" ref="484836517"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="994518448"/>
 									<string key="NSReuseIdentifierKey">_NS:24</string>
 									<object class="NSOpenGLPixelFormat" key="NSPixelFormat">
@@ -1483,6 +1490,7 @@
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{318, 359}, {190, 27}}</string>
 									<reference key="NSSuperview" ref="484836517"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
 									<bool key="NSEnabled">YES</bool>
@@ -1521,12 +1529,14 @@
 							</array>
 							<string key="NSFrameSize">{505, 381}</string>
 							<reference key="NSSuperview" ref="439893737"/>
+							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1058055470"/>
 							<string key="NSClassName">NSView</string>
 						</object>
 					</array>
 					<string key="NSFrameSize">{505, 381}</string>
 					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="484836517"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
@@ -3984,7 +3994,96 @@
 			<nil key="sourceID"/>
 			<int key="maxID">631</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">NSLayoutConstraint</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">POAppDelegate</string>
+					<string key="superclassName">NSObject</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="handleDateChange:">NSDatePicker</string>
+						<string key="handleGoFastChange:">NSButton</string>
+						<string key="handleNowChange:">NSButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="handleDateChange:">
+							<string key="name">handleDateChange:</string>
+							<string key="candidateClassName">NSDatePicker</string>
+						</object>
+						<object class="IBActionInfo" key="handleGoFastChange:">
+							<string key="name">handleGoFastChange:</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBActionInfo" key="handleNowChange:">
+							<string key="name">handleNowChange:</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="checkboxGoFast">NSButton</string>
+						<string key="checkboxNow">NSButton</string>
+						<string key="datePicker">NSDatePicker</string>
+						<string key="glview">POOpenGLView</string>
+						<string key="window">NSWindow</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="checkboxGoFast">
+							<string key="name">checkboxGoFast</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="checkboxNow">
+							<string key="name">checkboxNow</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="datePicker">
+							<string key="name">datePicker</string>
+							<string key="candidateClassName">NSDatePicker</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="glview">
+							<string key="name">glview</string>
+							<string key="candidateClassName">POOpenGLView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="window">
+							<string key="name">window</string>
+							<string key="candidateClassName">NSWindow</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/POAppDelegate.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">POOpenGLView</string>
+					<string key="superclassName">NSOpenGLView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="datePicker">id</string>
+						<string key="popup">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="datePicker">
+							<string key="name">datePicker</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="popup">
+							<string key="name">popup</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/POOpenGLView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
